@@ -639,14 +639,143 @@ first character of the file located at C<[ 1, 1, 1 ]>.
 
 The second and third numbers are similar, except that the second is the
 literal horizontal character, and the third is the visual column, taking
-into account tabbing.
+into account tabbing (see L<PPI::Document/"tab_width [ $width ]">).
 
-Returns C<undef> on error, or if the L<PPI::Document> object has not been indexed.
+Returns C<undef> on error, or if the L<PPI::Document> object has not been
+indexed.
 
 =cut
 
 sub location {
 	my $self = shift;
+
+	$self->_ensure_location_present() or return undef;
+
+	# Return a copy, not the original
+	return [ @{$self->{_location}} ];
+}
+
+=pod
+
+=head2 line_number
+
+If the Element exists within a L<PPI::Document> that has indexed the Element
+locations using C<PPI::Document::index_locations>, the C<line_number> method
+will return the line number of the first character of the Element within the
+Document.
+
+Returns C<undef> on error, or if the L<PPI::Document> object has not been
+indexed.
+
+=begin testing line_number 3
+
+my $document = PPI::Document->new(\<<'END_PERL');
+
+
+   foo
+END_PERL
+
+isa_ok( $document, 'PPI::Document' );
+my $words = $document->find('PPI::Token::Word');
+is( scalar @{$words}, 1, 'Found expected word token.' );
+is( $words->[0]->line_number, 3, 'Got correct line number.' );
+
+=end testing
+
+=cut
+
+sub line_number {
+	my $self = shift;
+
+	$self->_ensure_location_present() or return undef;
+
+	return $self->{_location}[0];
+}
+
+=pod
+
+=head2 column_number
+
+If the Element exists within a L<PPI::Document> that has indexed the Element
+locations using C<PPI::Document::index_locations>, the C<column_number> method
+will return the column number of the first character of the Element within the
+Document.
+
+Returns C<undef> on error, or if the L<PPI::Document> object has not been
+indexed.
+
+=begin testing column_number 3
+
+my $document = PPI::Document->new(\<<'END_PERL');
+
+
+   foo
+END_PERL
+
+isa_ok( $document, 'PPI::Document' );
+my $words = $document->find('PPI::Token::Word');
+is( scalar @{$words}, 1, 'Found expected word token.' );
+is( $words->[0]->column_number, 4, 'Got correct column number.' );
+
+=end testing
+
+=cut
+
+sub column_number {
+	my $self = shift;
+
+	$self->_ensure_location_present() or return undef;
+
+	return $self->{_location}[1];
+}
+
+=pod
+
+=head2 visual_column_number
+
+If the Element exists within a L<PPI::Document> that has indexed the Element
+locations using C<PPI::Document::index_locations>, the C<visual_column_number>
+method will return the visual column number of the first character of the
+Element within the Document, according to the value of
+L<PPI::Document/"tab_width [ $width ]">.
+
+Returns C<undef> on error, or if the L<PPI::Document> object has not been
+indexed.
+
+=begin testing visual_column_number 3
+
+my $document = PPI::Document->new(\<<"END_PERL");
+
+
+\t foo
+END_PERL
+
+isa_ok( $document, 'PPI::Document' );
+my $tab_width = 5;
+$document->tab_width($tab_width);  # don't use a "usual" value.
+my $words = $document->find('PPI::Token::Word');
+is( scalar @{$words}, 1, 'Found expected word token.' );
+is(
+	$words->[0]->visual_column_number,
+	$tab_width + 2,
+	'Got correct visual column number.',
+);
+
+=end testing
+
+=cut
+
+sub visual_column_number {
+	my $self = shift;
+
+	$self->_ensure_location_present() or return undef;
+
+	return $self->{_location}[2];
+}
+
+sub _ensure_location_present {
+	my $self = shift;
+
 	unless ( exists $self->{_location} ) {
 		# Are we inside a normal document?
 		my $Document = $self->document or return undef;
@@ -666,8 +795,7 @@ sub location {
 		}
 	}
 
-	# Return a copy, not the original
-	return [ @{$self->{_location}} ];
+	return 1;
 }
 
 # Although flush_locations is only publically a Document-level method,
