@@ -13,7 +13,7 @@ BEGIN {
 use PPI;
 
 # Execute the tests
-use Test::More tests => 24;
+use Test::More tests => 33;
 
 # =begin testing __insert_after 6
 {
@@ -49,6 +49,22 @@ is( $Document->serialize, "print 'Hello World'foo;",
 
 
 
+# =begin testing column_number 3
+{
+my $document = PPI::Document->new(\<<'END_PERL');
+
+
+   foo
+END_PERL
+
+isa_ok( $document, 'PPI::Document' );
+my $words = $document->find('PPI::Token::Word');
+is( scalar @{$words}, 1, 'Found expected word token.' );
+is( $words->[0]->column_number, 4, 'Got correct column number.' );
+}
+
+
+
 # =begin testing insert_after after __insert_after 6
 {
 my $Document = PPI::Document->new( \"print 'Hello World';" );
@@ -79,6 +95,44 @@ is( $foo->content, 'foo', 'Created Word token' );
 $semi->insert_before( $foo );
 is( $Document->serialize, "print 'Hello World'foo;",
 	'insert_before actually inserts' );
+}
+
+
+
+# =begin testing line_number 3
+{
+my $document = PPI::Document->new(\<<'END_PERL');
+
+
+   foo
+END_PERL
+
+isa_ok( $document, 'PPI::Document' );
+my $words = $document->find('PPI::Token::Word');
+is( scalar @{$words}, 1, 'Found expected word token.' );
+is( $words->[0]->line_number, 3, 'Got correct line number.' );
+}
+
+
+
+# =begin testing visual_column_number 3
+{
+my $document = PPI::Document->new(\<<"END_PERL");
+
+
+\t foo
+END_PERL
+
+isa_ok( $document, 'PPI::Document' );
+my $tab_width = 5;
+$document->tab_width($tab_width);  # don't use a "usual" value.
+my $words = $document->find('PPI::Token::Word');
+is( scalar @{$words}, 1, 'Found expected word token.' );
+is(
+	$words->[0]->visual_column_number,
+	$tab_width + 2,
+	'Got correct visual column number.',
+);
 }
 
 
